add h2 and fill optimization