@@ -29,8 +29,13 @@ dependencies {
     implementation 'xyz.tozymc.spigot:title-api:1.0'
 }
 
+tasks.withType(JavaCompile) {
+    options.compilerArgs += ["--add-modules", "jdk.incubator.vector"]
+}
+
 test {
     useJUnitPlatform()
+    jvmArgs += ["--add-modules", "jdk.incubator.vector"]
 }
 
 shadowJar {
@@ -44,6 +49,7 @@ shadowJar {
     relocate 'com.zaxxer.hikari', 'io.github.dailystruggle.rtp.hikari'
     relocate 'org.yaml.snakeyaml', 'io.github.dailystruggle.rtp.snakeyaml'
     relocate 'me.carleslc.Simple-YAML', 'io.github.dailystruggle.rtp.Simple-Yaml'
+    relocate 'org.h2', 'io.github.dailystruggle.rtp.h2'
 }
 
 artifacts {
